[gd_scene load_steps=6 format=3 uid="uid://b4hk6wjfpkok6"]

[ext_resource type="Script" uid="uid://c10xkwimg35os" path="res://cursors/editor_cursor.gd" id="1_i2oik"]
[ext_resource type="Texture2D" uid="uid://g6lw526cxl3h" path="res://cursors/cursor.png" id="2_nvx0b"]
[ext_resource type="Texture2D" uid="uid://biychvjet5htu" path="res://tiles/tileatlaspr4.png" id="3_6hjjx"]
[ext_resource type="Texture2D" uid="uid://cv5lyjhvmf76h" path="res://cursors/colorin.png" id="4_cr471"]
[ext_resource type="Texture2D" uid="uid://djhsmwlv5e757" path="res://cursors/outline.png" id="5_jdn3e"]

[node name="EditorCursor" type="Node2D"]
script = ExtResource("1_i2oik")

[node name="CursorIcon" type="Sprite2D" parent="."]
visible = false
position = Vector2(31, 33)
texture = ExtResource("2_nvx0b")

[node name="BlockIcon" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.588235)
texture = ExtResource("3_6hjjx")
region_enabled = true
region_rect = Rect2(384, 0, 128, 128)

[node name="Cursor" type="Node2D" parent="."]

[node name="CursorColorIn" type="Sprite2D" parent="Cursor"]
scale = Vector2(3, 3)
texture = ExtResource("4_cr471")
offset = Vector2(6, 8.5)

[node name="CursorOutline" type="Sprite2D" parent="Cursor"]
scale = Vector2(3, 3)
texture = ExtResource("5_jdn3e")
offset = Vector2(6, 8.5)

[node name="NamePanel" type="Panel" parent="."]
visible = false
offset_left = -96.0
offset_top = -60.0
offset_right = 126.0
offset_bottom = -6.0

[node name="NameLabel" type="Label" parent="NamePanel"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 228.0
offset_bottom = 56.0
text = "Player1wwwdwd"
text_overrun_behavior = 1
